# aviation-data-warehouse

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  prefect.yaml  pyproject.toml
images/flow_runner/: Dockerfile
make/: 00_setup_gcp.mk  01_setup_dev.mk  02_setup_prefect.mk  03_setup_infra.mk  03_test_flow.mk  05_deploy_flow.mk
src/: gcs.py  main.tf  provider.tf  utils.py  variables.tf
src/dbt/: dbt_project.yml
src/infrastructure/: main.tf  variables.tf
src/prefect/blocks/: create_env_var_strings.py  create_flightapi_api_key.py  create_flightradar24_credentials.py  create_gcp_credentials.py
src/prefect/flows/: EL_flightradar24_airports.py  EL_flightradar24_flights.py  EL_flightrader24_flights.py
src/prefect/work_pool/: gcr_push_template.json
src/schema/: raw.py
tests/: test_utils.py
